fixed hero text size not fitting the screen width properly

--- a/styles/pages/home.module.scss
+++ b/styles/pages/home.module.scss
@@ -30,7 +30,7 @@
 				display: block;
 			}
 			&_primary {
-				font-size: 18vw;
+				font-size: 16vw;
 				@include breakpoint-up(large) {
 					font-size: 96px;
 				}
